Bug fixes & add new features